K8S/commands-deploy.yml
# CommandService deployment config
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-deploy
spec:
  #Define no of minimum instances to be up
  replicas: 1
  # Select the defined 'commandservice' template
  selector:
    matchLabels:
      app: commandservice
  # Define pod and container
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
        - name: commandservice
        # Docker image
          image: mohamednawaz/commandservice:latest

# Cluster IP config
# Seperate the deployment from the cluster IP config with ---
---
apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-srv
spec:
  type: ClusterIP
  selector:
  # 'commands-deploy' app pointer
    app: commandservice
  ports:
    - name: commandservice
      protocol: TCP
      port: 80
      targetPort: 80
