K8S/mssql-platformservice-deploy.yml
#Defines MSSQL server deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: mssqldb
      volumes:
        - name: mssqldb
          persistentVolumeClaim:
            claimName: mssql-pvc

# Cluster IP config
# Seperate the deployment from the cluster IP config with ---
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    # 'mssql-platformservice-deploy' app pointer
    app: mssql
  ports:
    - name: mssql
      protocol: TCP
      port: 1433
      targetPort: 1433

# Loadbalancer config - allows direct access to mssql server
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer-srv
spec:
  type: LoadBalancer
  selector:
    # 'mssql-platformservice-deploy' app pointer
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
