K8S/rabbitmq-deploy.yml
# RabbitMQ server deployment config
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            # Port to access management web interface for testing purposes
            - containerPort: 15672
              name: rbmq-mgmt-port
            # Port for services to access rabbitmq server
            - containerPort: 5672
              name: rbmq-msg-port

# Cluster IP config
# Seperate the deployment from the cluster IP config with ---
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-srv
spec:
  type: ClusterIP
  selector:
    # 'rabbitmq-deploy' app pointer
    app: rabbitmq
  ports:
    # Define ports for rabbitmq containers (management and message) within clusterIP
    - name: rbmq-mgmt-port
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: rbmq-msg-port
      protocol: TCP
      port: 5672
      targetPort: 5672

# Loadbalancer config - for external access
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer
spec:
  type: LoadBalancer
  selector:
    # 'rabbitmq-deploy' app pointer
    app: rabbitmq
  ports:
    - name: rbmq-mgmt-port
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: rbmq-msg-port
      protocol: TCP
      port: 5672
      targetPort: 5672
